--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,124 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+.ifc-property-menu {
+    opacity: 0.2;
+    font-family: sans-serif;
+    border: 1px solid gray;
+    width: 20rem;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    transition: 0.5s;
+}
+
+.ifc-property-menu:hover{
+    opacity: 0.9 ;
+}
+
+.ifc-property-item {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 0.5rem;
+    border-bottom: solid 1px gray;
+}
+
+.ifc-property-value {
+    width: 100%;
+    text-align: right;
+}
+
+/*Tree view: https://www.w3schools.com/howto/howto_js_treeview.asp*/
+
+.ifc-tree-menu {
+    position: absolute;
+    overflow-y: scroll;
+    background-color: white;
+    height: 100vh;
+}
+
+li ul {
+    user-select: none;
+    cursor: pointer;
+}
+
+/* Remove default bullets */
+ul, #myUL {
+    list-style-type: none;
+}
+
+/* Remove margins and padding from the parent ul */
+#myUL {
+    margin: 0.5rem;
+    padding: 0;
+}
+
+/* Style the caret/arrow */
+.caret {
+    cursor: pointer;
+    user-select: none; /* Prevent text selection */
+}
+
+/* Create the caret/arrow with a unicode, and style it */
+.caret::before {
+    content: "\25B6";
+    color: black;
+    display: inline-block;
+    margin-right: 6px;
+}
+
+/* Rotate the caret/arrow icon when clicked on (using JavaScript) */
+.caret-down::before {
+    transform: rotate(90deg);
+}
+
+/* Hide the nested list */
+.nested {
+    display: none;
+}
+
+/* Show the nested list when the user clicks on the caret/arrow (with JavaScript) */
+.active {
+    display: block;
+    margin-left: 10px;
+}
+
+.checkboxes {
+    position: absolute;
+    right: 1rem;
+    bottom: 1rem;
+}
+
+#button-container {
+    z-index: 2;
+    position: absolute;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    right: 0;
+    top:50vh
+}
+
+
+#button-container * {
+    margin: 0.5rem;
+    padding: 8px;
+}
+
+.ifcjs-dimension-preview {
+    width: 1rem;
+    height: 1rem;
+    background-color: #FFA50F;
+    border-radius: 1rem;
+    opacity: 0.5;
+}
+
+.ifcjs-dimension-label {
+    background-color: rgb(104, 85, 189);
+    color: white;
+    padding: 4px;
+    border-radius: 4px;
+    opacity: 0.9;
+}
